--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sticky Pickins Farm</title>
+    <title>Sticky Pickins</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
@@ -16,11 +16,11 @@
     <section class="hero is-medium">
         <div class="hero-body">
             <div class="container">
-                <h1 class="title is-1 ">Welcome to Sticky Pickins Farm.</h1>
+                <h1 class="title is-1 ">Welcome to Sticky Pickins</h1>
                 <h2 class="subtitle">A simple farm <br> for a simple America.
                 </h2>
-                <!-- <a href="#" class="button is-white is-medium is-inverted">Learn More&ensp;<i
-                        class="fad fa-chevron-right"></i></a> -->
+                <a href="./about.html" class="button is-white is-medium is-inverted">Learn More&ensp;<i
+                        class="fad fa-chevron-right"></i></a>
             </div>
         </div>
     </section>
@@ -47,8 +47,8 @@
                         <h1 class="title is-1 ">All Natural Honey</h1>
                         <hr class="content-divider">
                         <h2 class="subtitle">Our honey is 100% natural and raw, so you know you are getting the best!</h2>
-                        <!-- <a href="#" class="button is-white is-inverted" disabled>Get Some!&ensp;<i
-                                class="fad fa-chevron-right"></i></a> -->
+                        <a href="#" class="button is-white is-inverted" disabled>Buy Some!&ensp;<i
+                                class="fad fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
         </div>
     </section>
     <section class="cta va">
-        <div class="container">
+        <div class="container mt-6 mr-2 ml-2">
             <div class="columns">
                 <div class="column is-6">
                     <h1 class="title is-1 ">Coming Soon!</h1>
@@ -106,8 +106,9 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>Sticky Pickins Farm</strong> by Matthew Bischoff and Colleen Muldowney. Save the bees!
+                <strong>Sticky Pickins</strong> by Matthew Bischoff and Colleen Muldowney. Save the bees!
             </p>
+            <p>Copyright 2021</p>
         </div>
     </footer>
 </body>
